--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -1,11 +1,15 @@
-<header>
-  <a class="site-logo" href="/">
-    Auth Example! 🕵️
-  </a>
-  {{#if isLoggedIn}}
-    <a href="/api/logout">Logout</a>
-  {{else}}
-    <a href="/login">Login</a>
-    <a href="/signup">Sign Up</a>
-  {{/if}}
+{{!-- views/partials/header.handlebars --}}
+<header class="site-header">
+  <nav class="nav">
+    <a href="/">Home</a>
+    <a href="/books/search">Search books</a>
+    <a href="/books/saved">My saved books</a>
+
+    {{#if isLoggedIn}}
+      <a href="/api/logout">Logout</a>
+    {{else}}
+      <a href="/login">Login</a>
+      <a href="/signup">Sign Up</a>
+    {{/if}}
+  </nav>
 </header>
