--- a/views/results.handlebars
+++ b/views/results.handlebars
@@ -1,5 +1,5 @@
 {{!-- views/results.handlebars --}}
-<h1>Search results for "{{query}}</h1>
+<h1>Search results for "{{query}}"</h1>
 
 <p>
     <a href="/books/search">New search</a> |
