modified bookRoutes.js, bookController.js, search.handlebars

--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -7,7 +7,7 @@
     <p class="error">{{error}}</p>
 {{/if}}
 
-<form action="/books/search" method="POST" class="search-form">
+<form action="/books/search" method="GET" class="search-form">
     <label for="query">Search</label>
     <input
         id="query"
