modified style.css, main.handlebars, index.handlebars, login.handlebars, protected.handlebars, savedBooks.handlebars, search.handlebars, and signup.handlebars

--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -1,25 +1,27 @@
 {{!-- views/search.handlebars --}}
-<h1>Find a book</h1>
+<main class="page-container">
+    <h1>Find a book</h1>
 
-<p>Search by title, author, or keyword</p>
+    <p>Search by title, author, or keyword</p>
 
-{{#if error}}
-    <p class="error">{{error}}</p>
-{{/if}}
+    {{#if error}}
+        <p class="error">{{error}}</p>
+    {{/if}}
 
-<form action="/books/search" method="GET" class="search-form">
-    <label for="query">Search</label>
-    <input
-        id="query"
-        name="query"
-        type="text"
-        placeholder="e.g. Legend Marie Lu"
-        value="{{query}}"
-        required
-    >
-    <button type="submit">Search</button>
-</form>
+    <form action="/books/search" method="GET" class="search-form">
+        <label for="query">Search</label>
+        <input
+            id="query"
+            name="query"
+            type="text"
+            placeholder="e.g. Legend Marie Lu"
+            value="{{query}}"
+            required
+        >
+        <button type="submit">Search</button>
+    </form>
 
-<p>
-    <a href="/books/saved">View my saved books</a>
-</p>
+    <p>
+        <a href="/books/saved">View my saved books</a>
+    </p>
+</main>
