--- a/public/style.css
+++ b/public/style.css
@@ -187,6 +187,7 @@ form button:hover {
 
 .book-card img {
   width: 100%;
+  height: 100%;
   border-radius: var(--radius-md);
   object-fit: cover;
 }
