--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,8 +8,11 @@
   <link rel="stylesheet" href="/style.css">
 </head>
 <body>
+  {{>header}}
+
   {{{body}}}
 
   {{> footer}}
+  
 </body>
 </html>
